# mcpp-client

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp  version.hpp  version.hpp.in
assets/: awesomeface.qoi  container.qoi  test.qoi
include/glad/: glad.c  glad.h
shaders/: main.frag  main.vert
